Modificed index demo pgae

--- a/flaskwebapp/templates/index.jade
+++ b/flaskwebapp/templates/index.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   .jumbotron
     h1 Flask/Jade
-    p.lead Flask is a free and open web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.
+    p.lead Flask is a free open and large web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.
     p
       a.btn.btn-primary.btn-large(href='http://flask.pocoo.org/') Learn more &raquo;
   .row
